--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-en_core_web_sm==3.4.0
+spacy>=3.0.0,<4.0.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#egg=en_core_web_sm
 gensim==4.2.0
 matplotlib==3.6.1
 nltk==3.7
