--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 spacy>=3.4.0,<3.5.0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.5.0.tar.gz#egg=en_core_web_sm
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0.tar.gz#egg=en_core_web_sm
 gensim==4.2.0
 matplotlib==3.6.0
 nltk==3.7
@@ -7,6 +7,7 @@ numpy==1.22.4
 pandas==1.4.4
 Pillow==9.2.0
 plotly==5.10.0
+spacy==3.4.0
 seaborn==0.12.1
 spacy_streamlit==1.0.4
 streamlit==1.13.0
